--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,18 @@
 steps:
+# This step builds the container image.
 - name: 'gcr.io/cloud-builders/docker'
   id: Build
   args:
-  -  'build'
-  -  '-t'
-  -  'gcr.io/$PROJECT_ID'/wns:$SHORT_SHA'
+  - 'build'
+  - '-t'
+  - 'gcr.io/$PROJECT_ID/wns:$SHORT_SHA'
+  
 
-
- -  name: 'gcr.io/cloud-builders/docker' 
-    id: Push
-    args:
-    -  'push'
-    -  'gcr.io/$PROJECT_ID'/wns:$SHORT_SHA'
+# This step pushes the image to Container Registry
+# The PROJECT_ID and SHORT_SHA variables are automatically
+# replaced by Cloud Build.
+- name: 'gcr.io/cloud-builders/docker'
+  id: Push
+  args:
+  - 'push'
+  - 'gcr.io/$PROJECT_ID/wns:$SHORT_SHA'
