--- a/testapp/angular.json
+++ b/testapp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e1868ff7-5758-4a0f-9612-9c4b26a69890"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
