--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,15 @@
 steps:
-# This step builds the container image.
-- name: 'gcr.io/cloud-builders/docker'
-  id: Build
-  args:
-  - 'build'
-  - '-t'
-  - 'gcr.io/$PROJECT_ID/wns:$SHORT_SHA'
-  - '.'
-  
-
-# This step pushes the image to Container Registry
-# The PROJECT_ID and SHORT_SHA variables are automatically
-# replaced by Cloud Build.
-- name: 'gcr.io/cloud-builders/docker'
-  id: Push
-  args:
-  - 'push'
-  - 'gcr.io/$PROJECT_ID/wns:$SHORT_SHA'
+  # build the container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["build", "-t", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA", "./testapp"]
+  # push container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA"]
+  # deploy container image to GKE
+# - name: "gcr.io/cloud-builders/gke-deploy"
+#   args:
+#   - run
+#   - --filename=kubernetes-resource-file
+#   - --image=gcr.io/project-id/image:tag
+#   - --location=location
+#   - --cluster=cluster
