--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # build the container image
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA", "./testapp"]
+  args: ["build", "-t", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA", "./"]
   # push container image
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA"]
