--- a/testapp/Dockerfile
+++ b/testapp/Dockerfile
@@ -1,5 +1,5 @@
 #build stage
-FROM node:Latest as build-step
+FROM node:16.16.0 as build-step
 RUN mkdir -p /app
 WORKDIR /app
 COPY package.json /app/package.json 
