--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,10 +6,10 @@ steps:
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA"]
   # deploy container image to GKE
-# - name: "gcr.io/cloud-builders/gke-deploy"
-#   args:
-#   - run
-#   - --filename=kubernetes-resource-file
-#   - --image=gcr.io/project-id/image:tag
-#   - --location=location
-#   - --cluster=cluster
+ - name: "gcr.io/cloud-builders/gke-deploy"
+   args:
+   - run
+   - --filename=./testapp/deployment.yaml
+   - --image=gcr.io/$PROJECT_ID/wns:$SHORT_SHA
+   - --location=us-central1-a
+   - --cluster=primary
