--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,10 +6,13 @@ steps:
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA"]
   # deploy container image to GKE
-- name: "gcr.io/cloud-builders/gke-deploy"
+- name: 'gcr.io/cloud-builders/kubectl'
   args:
-   - run
-   - --filename=./testapp/deployment.yaml
-   - --image=gcr.io/$PROJECT_ID/wns:$SHORT_SHA
-   - --location=us-central1-a
-   - --cluster=primary
+  - set
+  - image
+  - deployment
+  - $_CONTAINER_NAME=gcr.io/$PROJECT_ID/$_IMAGE_PATH:$SHORT_SHA  
+  
+  
+  
+
