--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
   - set
   - image
   - deployment
-  - $_CONTAINER_NAME=gcr.io/$PROJECT_ID/$_IMAGE_PATH:$SHORT_SHA  
+  - demo=gcr.io/$PROJECT_ID/wns:$SHORT_SHA  
   
   
   
