--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,6 +12,10 @@ steps:
   - image
   - deployment
   - demo=gcr.io/$PROJECT_ID/wns:$SHORT_SHA  
+
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=primary'
   
   
   
