--- a/testapp/deployment.yaml
+++ b/testapp/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: simple-app-deployment
+  name: angularapp
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: simple-app
+      app: angularapp
   template:
     metadata:
       labels:
-        app: simple-app
+        app: angularapp
     spec:
       containers:
       - name: simple-app
@@ -20,7 +20,7 @@ spec:
             memory: "256Mi"
             cpu: "500m"
         ports:
-        - containerPort: 3000
+        - containerPort: 80
 
 
 
@@ -28,12 +28,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: simple-app-service
+  name: angularapp-service
 spec:
   type: LoadBalancer
   selector:
-    app: simple-app
+    app: angularapp
   ports:
-  - port: 4000
-    targetPort: 3000
+  - port: 80
+    targetPort: 80
     protocol: TCP
