--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+options:
+  logging: CLOUD_LOGGING_ONLY
   # build the container image
 - name: "gcr.io/cloud-builders/docker"
   args: ["build", "-t", "gcr.io/$PROJECT_ID/wns:$SHORT_SHA", "./testapp"]
